# ChaiOS

./: ChaiOS.sln  LICENSE  README.md
ACPICA/generate/msvc9/: AcpiSubsystem.vcxproj  AcpiSubsystem.vcxproj.filters  ChaiOSL.cpp
ACPICA/generate/msvc9/AcpiSubsystemDebug/: .bsc
ACPICA/libraries/: Acpica_dbg.lib
ACPICA/source/components/tables/: tbxfload.c
ACPICA/source/components/utilities/: utclib.c  utuuid.c
ACPICA/source/include/: chaiacpi.h
ACPICA/source/include/platform/: acchaios.h  acenv.h  acmsvc.h  chaiacpi.h
ACPICA/source/tools/acpiexec/: aemain.c
ACPICA/source/tools/acpihelp/: acpihelp.h
ChaiOS/: ChaiOS.vcxproj  ChaiOS.vcxproj.filters  EDID.h  KernelGraphics.cpp  KernelGraphics.h  PortableExecutable.cpp  PortableExecutable.h  TrueType.cpp  TrueType.h  bidi.cpp  bidi.h  buildmods.bat  chaimodule16.asm  endian.cpp  entry.cpp  font.h  gnuc.cpp  kmain.cpp  krnlmap.map  langstrings.cpp  langstrings.h  liballoc.cpp  liballoc.h  memory.cpp  memory.h  moduleload.cpp  moduleload.h  msvc.cpp  multiboot.cpp  paging.h  pmmngr.h  realmodule.h  semaphore.cpp  semaphore.h  setvesamode.asm  spinlock.h  stdafx.h  terminal.cpp  terminal.h  unicode_bidi.cpp  (+2 more)
ChaiOS/arch/: basicinterrupts.h  basicpaging.h  basicphyscopy.cpp  basicphyscopy.h  basicsegmentation.h  cpusetup.h  stack.h  terminal_basic.h
ChaiOS/arch/i386/: basicinterruptsx86.cpp  basicpagingx86.cpp  basicsegmentationx86.cpp  cpusetupx86.cpp  pagingdefs.h  pmmngrx86.cpp  spinlockx86.cpp  stack.asm  terminal_basicx86.cpp  vmmngrx86.cpp
ChaiOS/arch/x64/: basicinterruptsx64.cpp  basicpagingx64.cpp  basicsegmentationx64.cpp  cpusetupx64.cpp  pagingdefs.h  pagingx64.cpp  pmmngrx64.cpp  spinlockx64.cpp  stack.asm  terminal_basicx64.cpp  vmmngrx64.cpp
Hal/: Hal.filters  Hal.vcxproj  Hal.vcxproj.filters  InterruptManager.cpp  InterruptManager.h  InterruptTable.h  IrqChip.h  PCI.h  SMPasm32_tester  SMPasm32_tester.asm  SMPasm32_tester2  SMPasm32_tester2.asm  Scheduler.h  SegmentTable.h  hal.cpp  hal.h  msvc.cpp  stdafx.h
Hal/arch/i386-x64/: APIC.cpp  APIC.h  GDT.cpp  GDT.h  HalClassi386.cpp  IDT.cpp  IDT.h  Interrupts.asm  Interrupts64.asm  PCI.cpp  SMPAsm.h  SMPAsm64.asm  SMPasm32.asm  Schedulerx86.cpp  Schedulerx86.h  idtasm.h
Helper Files/: README.txt  copyramdisk.bat  filelist.ini  filelist64.ini
Helper Files/langs/en-GB/: chaikrnl.lng
Helper Files/langs/he-IL/: chaikrnl.lng
Include/: address.h  apiclass.h  asmfuncs.h  compiler.h  endian.h  gnuc.h  msvc.h  multiboot.h  ramdisk.h  registers.h
crtbase/: chaisetjmp.h  crtbase.vcxproj  crtbase.vcxproj.filters  ftol2.asm  ftol3.asm  generalasmx64.asm  generalasmx86.asm  multiply.asm  shift.asm
crtbase/rttr/: CMakeLists.txt  PCH.h  RTTRCast.h  RTTREnable.h  StandardTypes.cpp  StandardTypes.h  TypeInfo.cmake  TypeInfo.cpp  TypeInfo.h  rttr
crtbase/rttr/base/: CorePrerequisites.h  RawType.h  StaticAssert.h  TypeTraits.h
crtbase/rttr/impl/: RTTRCast_impl.h  TypeInfo_impl.h
kcstdlib/: Object.cpp  Object.h  RTTI.cpp  RTTI.h  complex.h  entry.cpp  exception.cpp  exception.h  hash.cpp  hash.h  ios.h  iostream.cpp  iostream.h  kcstdlib.h  kcstdlib.licenseheader  kcstdlib.vcxproj  kcstdlib.vcxproj.filters  list.h  math.cpp  math.h  matrix.h  msvc.cpp  ostream.cpp  ostream.h  stdafx.h  stdlib.cpp  stdlib.h  string.cpp  string.h
(+21 files in other folders)
